--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 	
      
     
-
+<script type="text/javascript" src="app.js"></script>
 <script type="text/javascript" src="particles.js"></script>
-<script type="text/javascript" src="https://vincentgarreau.com/particles.js/"></script>
+
 </body>
 </html>
