--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 
-	<title>How to use particle .js</title>
+	<title>Coming Soon</title>
    
 	<link rel="stylesheet" type="text/css" href="style.css">
     
